packages/build/tests/error/fixtures/fail_plugin/plugin.js
export default {
  onPreBuild({
    utils: {
      build: { failPlugin },
    },
  }) {
    failPlugin('test')
    console.log('onPreBuild')
  },
  onBuild() {
    console.log('onBuild')
  },
}
